--- a/summary_10/index.html
+++ b/summary_10/index.html
@@ -15,18 +15,11 @@
 </head>
 
 <body>
-    <h1>Практическое занятие №9</h1>
+    <h1>Практическое занятие №10</h1>
     <div class="card">
         <h3>Тема занятия</h3>
-        <p>Работа с DOM</p>
-    </div>
-
-    <div class="todoListHeader">
-
+        <p>Работа со строками</p>
     </div>
     <script src="./scripts/main.js"></script>
-    
-<!-- 
-    1. Создаем разметку нашей страницы. У нас будет блок заголовка (id=class=`todoListHeader`), в котором будут название приложения "Список добрых дел" (id=class=`todoListHeaderText`), и кнопка "Добавить" (id=`addTodo`, class=`button`). Под ним идет контейнер с собственно списком дел (id=class=`todoListContainer`). -->
 </body>
 </html>
