--- a/summary_12/index.html
+++ b/summary_12/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Summary_11</title>
+    <title>Summary_12</title>
 
     <!-- Подключаем стили -->
     <!-- нормализация (сброс стилей браузера по умолчанию, см. github.com/necolas/normalize.css) -->
@@ -15,17 +15,14 @@
 </head>
 
 <body>
-    <h1>Практическое занятие №11</h1>
+    <h1>Практическое занятие №12</h1>
     <div class="card">
         <h3>Тема занятия</h3>
-        <p>Асинхронные операции в JS</p>
+        <p>Асинхронные операции в JS. Функции-конструкторы.</p>
     </div>
+    <select id="categorySelect">
+    </select>
     <div class="products-container"></div>
-
-    <input id="delayTime" />
-    <button id="delayStart">Start</button>
-
-    
     <script src="./scripts/main.js"></script>
 </body>
 </html>
